# XPlane-MATB

./: .gitignore  CMakeLists.txt  README.md  XPlane_MATB.pro  XPlane_MATB.pro.user.302d6c9.21  XPlane_MATB.pro.user.6b6e9bc  XPlane_delay_using_keystrokes.py  XPlane_matb.cpp  airports.json  airports.txt  copy_plugin_toXPlane.sh  dialog.ui  main.cpp  matbwindow.cpp  matbwindow.h  matbwindow.ui  rest_dialog.cpp  rest_dialog.h  rest_dialog.ui
